--- a/data_aggregation_maup_example.ipynb
+++ b/data_aggregation_maup_example.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "# Aggregating Data to Different Geographies Using Maup\n",
     "\n",
-    "This code walks you through how to aggregate data using the [maup software package](https://github.com/mggg/maup), which might be needed to create a similar dataset to that mentioned in this [Case Study](https://redistrictingdatahub.org/tools/support/helping-civil-rights-organizations-create-a-dataset-for-rpv-analysis/)."
+    "This excellent code walks you through how to aggregate data using the [maup software package](https://github.com/mggg/maup), which might be needed to create a similar dataset to that mentioned in this [Case Study](https://redistrictingdatahub.org/tools/support/helping-civil-rights-organizations-create-a-dataset-for-rpv-analysis/)."
    ]
   },
   {
@@ -3334,7 +3334,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3348,7 +3348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
